# healthyhome

./: .gitignore  .gitmodules  CNAME  CONTRIBUTING.md  MAINTAINERS.md  README.md  _config.yml  index.md
.github/workflows/: clang-format.yml  super-linter.yml
_docs/about-us/: contact.md  maintainers.md
_docs/project-overview/: specifications.md  user-stories.md
_docs/system-overview/: api-reference.md  description.md  parameter-guide.md  sequence-diagram.md
_docs/system-setup/: hardware.md  software.md
_layouts/: default.html
api-reference/: _adapter_packet_8h.html  _adapter_packet_8h__incl.map  _adapter_packet_8h__incl.md5  _adapter_packet_8h_source.html  _b_s_e_c_sensor_8h.html  _b_s_e_c_sensor_8h__dep__incl.map  _b_s_e_c_sensor_8h__dep__incl.md5  _b_s_e_c_sensor_8h__incl.map  _b_s_e_c_sensor_8h__incl.md5  _b_s_e_c_sensor_8h_source.html  _b_s_e_c_sensor_message_8h.html  _b_s_e_c_sensor_message_8h__dep__incl.map  _b_s_e_c_sensor_message_8h__dep__incl.md5  _b_s_e_c_sensor_message_8h__incl.map  _b_s_e_c_sensor_message_8h__incl.md5  _b_s_e_c_sensor_message_8h_source.html  _bad_request_message_8h_source.html  _byte_packet_8h.html  _byte_packet_8h__incl.map  _byte_packet_8h__incl.md5  _byte_packet_8h_source.html  _c_o2e_message_8h.html  _c_o2e_message_8h__dep__incl.map  _c_o2e_message_8h__dep__incl.md5  _c_o2e_message_8h__incl.map  _c_o2e_message_8h__incl.md5  _c_o2e_message_8h_source.html  _density_packet_8h.html  _density_packet_8h__incl.map  _density_packet_8h__incl.md5  _density_packet_8h_source.html  _devices_8h.html  _devices_8h__incl.map  _devices_8h__incl.md5  _devices_8h_source.html  _driver_8h.html  _driver_8h__incl.map  _driver_8h__incl.md5  _driver_8h_source.html  _event_8h.html  (+796 more)
api-reference/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  defines_0.js  defines_1.js  (+93 more)
management-server/: .eslintrc  avahi.service  bundle.sh  jest.config.js  package-lock.json  package.json  start.sh  systemd.service  tsconfig.json
management-server/debian/: control  postinst  postrm
management-server/src/: config.ts  deferred-promise.ts  message-queue.ts  notifications.ts  resolvers.ts  schema.ts  server.ts  settings.ts  storage.ts  updates.ts
management-server/src/messages/: List.ts  Message.ts  index.ts
management-server/tests/: ListMessage.test.ts  Message.test.ts  Sensor.test.ts
mobile-app/: .gitignore  app.json  jsdoc.config.json  package-lock.json  package.json
mobile-app/__tests__/: App.js  App.test.js  Data.js  Home.js  Settings.js
mobile-app/ios/: Podfile
mobile-app/src/: App.js  Device.js  DeviceProvider.js  SensorsProvider.js  helpers.js
mobile-app/testing/: jest-setup.js
monitoring-server/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
monitoring-server/cmake/: CompilerWarnings.cmake  Project.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Testing.cmake
monitoring-server/docs/: CMakeLists.txt  Doxyfile.in
monitoring-server/include/core/: Device.h  Event.h  EventScheduler.h  Log.h  Message.h  Postman.h  Sensor.h  Server.h  Timer.h  defs.h  exceptions.h
monitoring-server/include/core/comms/: BytePacket.h  I2C.h  Packet.h  WordPacket.h
monitoring-server/include/core/events/: MessageDelivery.h  StopServer.h  TimerTrigger.h
monitoring-server/include/core/messages/: Devices.h  Sensors.h
monitoring-server/libs/: CMakeLists.txt
monitoring-server/libs/bme680/: CMakeLists.txt
monitoring-server/libs/bme680/include/bme680/: AdapterPacket.h  BSECSensor.h  BSECSensorMessage.h  CO2eMessage.h  Device.h  HumidityMessage.h  IAQMessage.h  TemperatureMessage.h  defs.h
monitoring-server/libs/bme680/src/: BSECSensor.cpp  Device.cpp
monitoring-server/libs/bme680/tests/: CMakeLists.txt
monitoring-server/libs/event-queue/: CMakeLists.txt
monitoring-server/libs/event-queue/include/evtq/: Scheduler.h
monitoring-server/libs/event-queue/src/: Scheduler.cpp
monitoring-server/libs/linux-i2c/: CMakeLists.txt
monitoring-server/libs/linux-i2c/include/linux-i2c/: Driver.h
monitoring-server/libs/linux-i2c/src/: Driver.cpp
monitoring-server/libs/linux-i2c/tests/: CMakeLists.txt
monitoring-server/libs/posix-timers/: CMakeLists.txt
monitoring-server/libs/posix-timers/include/posix-timers/: Factory.h  Timer.h
monitoring-server/libs/posix-timers/src/: Factory.cpp  Timer.cpp
monitoring-server/libs/posix-timers/tests/: CMakeLists.txt
monitoring-server/libs/si1145/: CMakeLists.txt
monitoring-server/libs/si1145/include/si1145/: Device.h  UVCoefficientPacket.h  UVMessage.h  UVSensor.h  VisibleMessage.h  VisibleSensor.h  defs.h
monitoring-server/libs/si1145/src/: Device.cpp  UVSensor.cpp  VisibleSensor.cpp
monitoring-server/libs/si1145/tests/: CMakeLists.txt
monitoring-server/libs/sn-gcja5/: CMakeLists.txt
monitoring-server/libs/sn-gcja5/include/sn-gcja5/: DensityPacket.h  Device.h  PM100Message.h  PM100Sensor.h  PM25Message.h  PM25Sensor.h  PMSensor.h  ParticleCountPacket.h  StatusMessage.h  StatusPacket.h  defs.h
monitoring-server/libs/sn-gcja5/src/: Device.cpp  PMSensor.cpp
monitoring-server/libs/sn-gcja5/tests/: CMakeLists.txt
monitoring-server/libs/zmq-postman/: CMakeLists.txt
monitoring-server/libs/zmq-postman/include/zmq-postman/: BadRequestMessage.h  Message.h  MessageBody.h  NotFoundMessage.h  Postman.h  defs.h
monitoring-server/libs/zmq-postman/src/: Message.cpp  MessageBody.cpp  Postman.cpp
monitoring-server/libs/zmq-postman/tests/: CMakeLists.txt  test_Message.cpp
monitoring-server/src/: MessageDelivery.cpp  Server.cpp  StopServer.cpp  TimerTrigger.cpp
monitoring-server/src/messages/: Devices.cpp  Sensors.cpp
monitoring-server/tests/: CMakeLists.txt  test_MessageEntity.cpp
(+44 files in other folders)
